--- a/project/src/locale/ru.json
+++ b/project/src/locale/ru.json
@@ -31,6 +31,15 @@
             "tours": "Наши туры",
             "details": "Подробнее"
             
+        },
+        "About": {
+            "desc": "Описание экскурсии",
+            "route": "Описание маршрута",
+            "info": "Важная информация",
+            "requirements": "При пересечении границы (Россия-Абхазия) при себе иметь:",
+            "passport": "Паспорт гражданина РФ",
+            "certificate": "Гражданам до 14 лет свидетельство о рождении",
+            "book": "Забронировать тур"
         }
 
     }
